# Live

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/derek/live/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_derek_live_JniPush_Pusher.h  live.c  native-lib.cpp
app/src/main/java/com/derek/live/: MainActivity.java  PcmToWavUtil.java
app/src/main/java/com/derek/live/Interface/: Controller.java
app/src/main/java/com/derek/live/JniPush/: Pusher.java
app/src/main/java/com/derek/live/config/: GlobalConfig.java
app/src/main/java/com/derek/live/impl/: AudioController.java  AudioRecordUtil.java  LiveController.java  VideoController.java
app/src/main/java/com/derek/live/listener/: LiveStateChangeListener.java
app/src/main/java/com/derek/live/params/: VideoParam.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/derek/live/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
